--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
 
     <script src="dist/spotify-wrapper.umd.js"></script>
     <script>
-        const albums = spotifyWrapper.searchAlbuns('Incubus');
-        const albumsEl = document.getElementById('albums');
+      const spotify = new spotifyWrapper({
+        token: 'BQC01U-c4xhYL1PThkD4emQSXQcqft4IX097TOCJ-cOzOkI7mc7loJkX-wTgujJOE0zbewC9fe78UDMs2W_hThFFr7QdkDs4u_4hA5UeNhT7mJac025Vhs70cw9jgb9V_BZ-JBL6iw',
+      });
+      const albums = spotify.search.albums('Aha');
+      const albumsEl = document.getElementById('albums');
 
-        albums.then(data => {
-            markup = data.albums.items.map(item =>
-                `<img src="${item.images[0].url}" alt="${item.name}" />`
-            ).join('');
+      albums.then(data => {
+          markup = data.albums.items.map(item =>
+              `<img src="${item.images[0].url}" alt="${item.name}" />`
+          ).join('');
 
-            albumsEl.innerHTML = markup;
-            console.log(markup);
-        })
+          albumsEl.innerHTML = markup;
+          console.log(markup);
+      })
     </script>
 </body>
 </html>
