fix package name

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <script src="dist/spotify-wrapper.umd.js"></script>
     <script>
-      const spotify = new spotifyWrapper({
-        token: 'BQC01U-c4xhYL1PThkD4emQSXQcqft4IX097TOCJ-cOzOkI7mc7loJkX-wTgujJOE0zbewC9fe78UDMs2W_hThFFr7QdkDs4u_4hA5UeNhT7mJac025Vhs70cw9jgb9V_BZ-JBL6iw',
+      const spotify = new SpotifyWrapper({
+        token: 'BQABrQd__bb4XYCR6_C03CA9BeH9aEgK9_y2O-Ie-vu7tkh-DgDbuUM_3dW8btem5ISiYycjU2N3QiAl9Aj2_7YpuEU1WIqLjxYB6IYKQnYPnJ4HPoDER_MFy9dyVBBXzFERImYttw',
       });
       const albums = spotify.search.albums('Aha');
       const albumsEl = document.getElementById('albums');
